fix fontsize on mobile

--- a/components/css/main.css
+++ b/components/css/main.css
@@ -3358,7 +3358,7 @@ input:-ms-input-placeholder {
 	}
 
 	.easy-hr-advantages__right {
-		padding: 30px;
+		padding: 30px 0;
 	}
 
 	.easy-hr-intro__right img {
@@ -3506,6 +3506,29 @@ input:-ms-input-placeholder {
 	}
 	.easy-perizie-intro__img .wpb_single_image {
 		text-align: right;
+	}
+
+	.soluzioni-template-single-easy-hr .head_soluzione h2,
+	.soluzioni-template-single-easy-hr .head_soluzione h1 {
+		width: auto;
+	}
+}
+
+@media screen and (max-width: 576px) {
+
+	input[type=text]::placeholder, input[type=email]::placeholder, input[type=tel]::placeholder {
+		font-size: 12px;
+	}
+	.easy-hr-advantages__right .wpcf7-submit {
+		padding: 16px 9px;
+		font-size: 12px;
+	}
+}
+
+@media screen and (max-width: 340px) {
+
+	.easy-hr-advantages__right .wpcf7-submit {
+		font-size: 10px;
 	}
 }
 
